test/spec/switch.txt
;;; TODO: rebase when testsuite repo updates to br_table
;;; ERROR: 1
;;; EXE: test/run-d8.py
;;; FLAGS: --spec
;;; STDIN_FILE: third_party/testsuite/switch.wast
(;; STDERR ;;;
third_party/testsuite/switch.wast:7:8: unexpected token "tableswitch"
      (tableswitch (get_local $i)
       ^^^^^^^^^^^
third_party/testsuite/switch.wast:7:20: syntax error, unexpected (
      (tableswitch (get_local $i)
                   ^

;;; STDERR ;;)
